--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next": "15.2.3",
     "next-themes": "*",
     "patch-package": "^8.0.0",
+    "peerjs": "*",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
